operators/manifests/cluster-autoscaler/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-autoscaler
  labels:
    app.kubernetes.io/name: cluster-autoscaler
