operators/manifests/cluster-autoscaler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-autoscaler
  namespace: cluster-autoscaler
  labels:
    app.kubernetes.io/name: cluster-autoscaler
spec:
  selector:
    app.kubernetes.io/name: cluster-autoscaler
  ports:
    - name: metrics
      port: 8085
      targetPort: 8085
      protocol: TCP
